--- a/video-processing-service/package.json
+++ b/video-processing-service/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@google-cloud/storage": "^7.14.0",
     "express": "^4.21.1",
+    "firebase-admin": "^13.0.1",
     "fluent-ffmpeg": "^2.1.3"
   },
   "devDependencies": {
