--- a/web-client/package.json
+++ b/web-client/package.json
@@ -22,12 +22,14 @@
     "firebase-functions": "^6.1.1",
     "lucide-react": "^0.468.0",
     "next": "15.0.3",
+    "random-sentence": "^1.0.4",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "txtgen": "^3.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
